# easyconf

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build_and_test.yml
include/: easyconf.h  getline.h
pkgconf/: easyconf.pc.in
src/: easyconf.c  getline.c  parameter.c
tests/: easyconf_tests.c  getline_tests.c  parameter_tests.c
